# CSC_51073_EP-Computer-Vision-Final-Project

./: .gitignore  README.md  download_datasets.py  logs.csv  main.ipynb  pyproject.toml
src/: create_finetuning_folders.py  download_datasets.py  fine_tune.py  finetuned_eval.py  workout_tracker.py  zero_shot.py
src/base/: transforms.py  utils.py
src/benchmark/: manual_inspection.py  manual_inspection_1.csv  manual_inspection_2.csv  manual_inspection_3.csv  manual_inspection_4.csv  manual_inspection_5.csv  run_benchmarks.py  utils.py  visualize_manual_inspection.ipynb
src/benchmark/manual_inspection/results/: finetuned_1.csv  finetuned_2.csv  finetuned_3.csv  finetuned_4.csv  finetuned_5.csv  finetuned_6.csv  pretrained_1.csv  pretrained_10.csv  pretrained_11.csv  pretrained_2.csv  pretrained_3.csv  pretrained_4.csv  pretrained_5.csv  pretrained_6.csv  pretrained_7.csv  pretrained_8.csv  pretrained_9.csv  timesformer_max_full_even_6_10_temperature=0.7.csv  timesformer_max_full_even_6_10_temperature=0.75.csv  timesformer_max_full_even_6_10_temperature=0.8.csv  timesformer_max_full_even_6_10_temperature=0.85.csv  timesformer_max_full_even_6_10_temperature=0.9.csv  timesformer_max_full_even_6_10_temperature=0.95.csv  (+137 more)
src/finetuning/: create_finetuning_folders.py  download_datasets.py  fine_tune.py  finetuned_eval.py  shorten_videos.py  sweep_timesformer.py  zero_shot.py
src/workout_tracker/: constants.py  recorder.py  workout_model.py  workout_tracker.py
val_results/: heckpoint_class_balance.csv  result.csv  val_analysis.ipynb  wandb_results.csv
