[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "numpy>=2.0.2",
    "patool>=1.15.0",
    "polars>=1.35.2",
    "decord>=0.6.0",
    "transformers>=4.45.0"
]

[tool.uv.workspace]
members = [
    "torch-playground",
]
