[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "numpy>=2.0.2",
    "patool>=1.15.0",
    "polars>=1.35.2",
    "transformers>=4.45.0",
    "pip>=25.3",
    "torch>=2.8.0",
    "decord>=0.6.0",
    "pillow>=11.3.0",
    "torchvision>=0.23.0",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
    "prettytable>=3.16.0",
    "video-transformers>=0.0.6",
]

[tool.uv.workspace]
members = [
    "torch-playground",
]
